state name tooltips

--- a/index.html
+++ b/index.html
@@ -350,6 +350,59 @@
 				renderMap()
 			})
 
+			var idToState = new Map()
+			idToState.set(1, "Alabama")
+			idToState.set(2, "Alaska")
+			idToState.set(4, "Arizona")
+			idToState.set(5, "Arkansas")
+			idToState.set(6, "California")
+			idToState.set(8, "Colorado")
+			idToState.set(9, "Connecticut")
+			idToState.set(10, "Delaware")
+			idToState.set(11, "District of Columbia")
+			idToState.set(12, "Florida")
+			idToState.set(13, "Georgia")
+			idToState.set(15, "Hawaii")
+			idToState.set(16, "Idaho")
+			idToState.set(17, "Illinois")
+			idToState.set(18, "Indiana")
+			idToState.set(19, "Iowa")
+			idToState.set(20, "Kansas")
+			idToState.set(21, "Kentucky")
+			idToState.set(22, "Louisiana")
+			idToState.set(23, "Maine")
+			idToState.set(24, "Maryland")
+			idToState.set(25, "Massachusetts")
+			idToState.set(26, "Michigan")
+			idToState.set(27, "Minnesota")
+			idToState.set(28, "Mississippi")
+			idToState.set(29, "Missouri")
+			idToState.set(30, "Montana")
+			idToState.set(31, "Nebraska")
+			idToState.set(32, "Nevada")
+			idToState.set(33, "New Hampshire")
+			idToState.set(34, "New Jersey")
+			idToState.set(35, "New Mexico")
+			idToState.set(36, "New York")
+			idToState.set(37, "North Carolina")
+			idToState.set(38, "North Dakota")
+			idToState.set(39, "Ohio")
+			idToState.set(40, "Oklahoma")
+			idToState.set(41, "Oregon")
+			idToState.set(42, "Pennsylvania")
+			idToState.set(44, "Rhode Island")
+			idToState.set(45, "South Carolina")
+			idToState.set(46, "South Dakota")
+			idToState.set(47, "Tennessee")
+			idToState.set(48, "Texas")
+			idToState.set(49, "Utah")
+			idToState.set(50, "Vermont")
+			idToState.set(51, "Virginia")
+			idToState.set(53, "Washington")
+			idToState.set(54, "West Virginia")
+			idToState.set(55, "Wisconsin")
+			idToState.set(56, "Wyoming")
+
 			//this is the line that actually draws the map. all vars and stuff should be above it. only functions should be below it.
 			renderMap()
 			
@@ -790,6 +843,8 @@
 							return d.id
 						}).attr("fill", function(d){
 							return radioUpdate(d)
+						}).append("title").text(function(d){
+							return idToState.get(parseInt(d.id))
 						})
 					} else {
 						svg.append("g")
