--- a/index.html
+++ b/index.html
@@ -431,6 +431,12 @@
 
 			var popScale;
 			var popCountyScale;
+			var partyScale;
+			var partyCountyScale;
+			var vote2016Scale;
+			var vote2016CountyScale;
+			var vote2012Scale;
+			var vote2012CountyScale;
 
 			//clear button
 			d3.select("#clrButton").on("click", clrButtonClick)
@@ -695,7 +701,8 @@
 				var id = parseInt(d.id);
 				if(partyDist[id]){
 					var party = partyDist[id].indexOf(Math.max.apply(Math, partyDist[id]));
-					var value = (partyDist[id][party]/popDist[id]) * 255;
+					//var value = (partyDist[id][party]/popDist[id]) * 255;
+					var value = partyScale(partyDist[id][party])
 					switch(party){
 						case 0:
 							return "rgb(0,0," + value + ")";
@@ -718,7 +725,8 @@
 				var id = parseInt(d.countyfips);
 				if(partyDistCounty[id]){	
 					var party = partyDistCounty[id].indexOf(Math.max.apply(Math, partyDistCounty[id]));
-					var value = (partyDistCounty[id][party]/popDistCounty[id]) * 255;
+					//var value = (partyDistCounty[id][party]/popDistCounty[id]) * 255;
+					var value = partyCountyScale(partyDistCounty[id][party])
 					switch(party){
 						case 0:
 							return "rgb(0,0," + value + ")";
@@ -775,7 +783,8 @@
 				var id = parseInt(d.id);
 				if(vote2016[id]){
 					var pres = vote2016[id].indexOf(Math.max.apply(Math, vote2016[id]));
-					var value = (vote2016[id][pres]/popDist[id])*255;
+					//var value = (vote2016[id][pres]/popDist[id])*255;
+					var value  = vote2016Scale(vote2016[id][pres])
 					switch(pres){
 						case 0:
 							return "rgb(" + value + ",0,0)";
@@ -799,7 +808,8 @@
 				var id = parseInt(d.countyfips);
 				if(vote2016County[id]){
 					var pres = vote2016County[id].indexOf(Math.max.apply(Math, vote2016County[id]));
-					var value = (vote2016County[id][pres]/popDistCounty[id])*255;
+					//var value = (vote2016County[id][pres]/popDistCounty[id])*255;
+					var value = vote2016CountyScale(vote2016County[id][pres])
 					switch(pres){
 						case 0:
 							return "rgb(" + value + ",0,0)";
@@ -858,7 +868,8 @@
 				var id = parseInt(d.id);
 				if(vote2012[id]){
 					var pres = vote2012[id].indexOf(Math.max.apply(Math, vote2012[id]));
-					var value = (vote2012[id][pres]/popDist[id])*255;
+					//var value = (vote2012[id][pres]/popDist[id])*255;
+					var value = vote2012Scale(vote2012[id][pres])
 					switch(pres){
 						case 0:
 							return "rgb(0,0," + value + ")";
@@ -898,7 +909,8 @@
 				var colors = [0,0,0];
 				if(vote2012County[id]){
 					var pres = vote2012County[id].indexOf(Math.max.apply(Math, vote2012County[id]));
-					var value = (vote2012County[id][pres]/popDistCounty[id])*255;
+					//var value = (vote2012County[id][pres]/popDistCounty[id])*255;
+					var value = vote2012CountyScale(vote2012County[id][pres])
 					switch(pres){
 						case 0:
 							return "rgb(0,0," + value + ")";
@@ -934,6 +946,22 @@
 					}
 				}
 				return d3.scaleLinear().domain([min, max]).range([60, 255])
+			}
+
+			function makeScaleArrays(dist, minColor){
+				var max = 0
+				var min = 1000000
+				for(var k in dist){
+					var m = dist[k].indexOf(Math.max.apply(Math, dist[k]));
+					m = dist[k][m]
+					if (m > max){
+						max = m
+					}
+					else if (m < min){
+						min = m
+					}
+				}
+				return d3.scaleLinear().domain([min, max]).range([minColor, 255])
 			}
 
 			function radioUpdate(d){
@@ -998,11 +1026,23 @@
 					popCountyScale = makeScale(popDistCounty);
 
 					partyDistCounty = getPartyCounty(poliData);
+					partyCountyScale = makeScaleArrays(partyDistCounty, 120)
+
 					vote2016County = getVote2016County(poliData);
+					vote2016CountyScale = makeScaleArrays(vote2016County, 120);
+
 					vote2012County = getVote2012County(poliData);
+					vote2012CountyScale = makeScaleArrays(vote2012County, 120);
+
 					partyDist = getParty(poliData);
+					partyScale = makeScaleArrays(partyDist, 120);
+
 					vote2016 = getVote2016(poliData);
+					vote2016Scale = makeScaleArrays(vote2016, 80);
+
 					vote2012 = getVote2012(poliData);
+					vote2012Scale = makeScaleArrays(vote2012, 80);
+
 					countyNameMaker(poliData);
 					poliData.forEach(function(d){
 						maxPartyCty.set(parseInt(d.countyfips), maxPartyCounty(partyDistCounty, d))
