--- a/index.html
+++ b/index.html
@@ -1116,6 +1116,17 @@
 						svg2.append("rect").attr("width", 15).attr("height", 15).attr("fill", "green").attr('x', 3*width/4 - 60)
 						svg2.append("text").text("Independent").attr('x', 3*width/4 - 40).attr('y', 15).attr("font-family", "sans-serif").attr("font-size", "20px").attr("fill", "black")
 					}
+
+					if(vote2012radio.property("checked")){
+						svg2.append("rect").attr("width", 15).attr("height", 15).attr("fill", "blue").attr('x', width/4 - 60)
+						svg2.append("text").text("Barack Obama").attr('x', width/4 - 40).attr('y', 15).attr("font-family", "sans-serif").attr("font-size", "20px").attr("fill", "black")
+
+						svg2.append("rect").attr("width", 15).attr("height", 15).attr("fill", "red").attr('x', 2*width/4 - 60)
+						svg2.append("text").text("Mitt Romney").attr('x', 2*width/4 - 40).attr('y', 15).attr("font-family", "sans-serif").attr("font-size", "20px").attr("fill", "black")
+
+						svg2.append("rect").attr("width", 15).attr("height", 15).attr("fill", "green").attr('x', 3*width/4 - 60)
+						svg2.append("text").text("Someone Else").attr('x', 3*width/4 - 40).attr('y', 15).attr("font-family", "sans-serif").attr("font-size", "20px").attr("fill", "black")
+					}
 				});
 				});
 			}
