Made python script faster, changed typo in index

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 						</div>
 						<br>
 						<div style="width: 50%">
-							<h4 style="margin: 0px; padding-top: 15px;">Transexual</h4>
+							<h4 style="margin: 0px; padding-top: 15px;">Transgender</h4>
 							<input type="checkbox" class="trans" value="1.0" id="yes_trans">Yes</input>
 							<br>
 							<input type="checkbox" class="trans" value="2.0" id="no_trans">No</input>
